# path_provider

./: .coderabbit.yaml  .gitignore  .pubignore  CHANGELOG.md  Cargo.toml  README.md  analysis_options.yaml  pubspec.yaml  rust-toolchain.toml
.github/: README.md  dependabot.yaml  pull_request_template.md
.github/workflows/: dart_check.yaml  flutter_check.yaml  links_and_spell_check.yaml  pull_request_check.yaml  rust_check.yaml
.github/workflows/config/spell_check/: cspell.json  dart_dictionary.txt  nicknames_dictionary.txt  other_dictionary.txt  rust_dictionary.txt
.zed/: debug.json  settings.json  tasks.json
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/: gradle.properties  settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/gradle/wrapper/: gradle-wrapper.properties
example/integration_test/: integration_test.dart  parity_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: comparison.dart  flutter.dart  main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig  Warnings.xcconfig
example/test/: main_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: path_provider_dart.dart
lib/src/: android.dart  dirs.dart  jni.dart
lib/src/ffi/: bindings.dart
src/: lib.rs
test/: path_provider_dart_test.dart  path_provider_native_test.dart
(+3 files in other folders)
