[package]
name = "path_provider_native"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[target.'cfg(not(target_os = "android"))'.dependencies]
dirs = "6.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", default-features = false, features = ["alloc", "NSBundle", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
] }

[profile.release]
lto = "thin"
strip = "debuginfo"
